--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 *{
     box-sizing: border-box;
-    font-family: Bigshot one;
 }
 
 body{
@@ -11,6 +10,7 @@ body{
 a:visited, a:link{
     text-decoration: none;
     color: white;
+    font-family: Bigshot one;
 }
 
 .container{
@@ -19,6 +19,7 @@ a:visited, a:link{
 }
 
 nav {
+    font-family: Bigshot one;
     color: white;
     height: 80px;
     background-color: #6fae68;
@@ -32,6 +33,7 @@ nav::after{
 }
 
 .nav-logo{
+    font-family: Bigshot one;
     color: #fff;
     font-size: 30px;
     float: left;
@@ -40,6 +42,7 @@ nav::after{
 }
 
 .nav-menu{
+    font-family: Bigshot one;
     float: right;
     margin-right: 30px;
 }
@@ -55,6 +58,7 @@ ul.nav-btn > li{
 }
 
 header{
+    font-family: Bigshot one;
     height: 600px;
     background-color: white;
     background-image: url("./bg_hd.jpg");
@@ -81,7 +85,12 @@ header{
     margin-bottom: 20px;
 }
 
+.hd-para{
+    color: #FFF;
+}
+
 section{
+    font-family: Bigshot one;
     text-align: center;
     padding-top: 50px;
     padding-bottom: 0;
@@ -140,6 +149,7 @@ section img{
 
 
 footer{
+    font-family: Bigshot one;
     padding: 15px;
     text-align: center;
     background-color: #6fae68;
